<resources>
    <string name="app_name">Aapka Trade Shopping</string>
    <string name="facebook_app_id">621308328026023</string>
    <string name="welcome">Welcome to EclipseExpress</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="login">Signin</string>
    <string name="register_detail">Dont have an account? Register!!!</string>
    <string name="facebook">Facebook</string>
    <string name="twitter">twitter</string>
    <string name="confirmpassword">Confirm Password</string>
    <string name="fname">First Name</string>
    <string name="lname">Last Name</string>
    <string name="mobile">Mobile Number</string>
    <string name="getstarted">Get Started</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="rupay_text">₹</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dashboardfragment">DashboardFragment</string>
    <string name="wishlist">WishList</string>
    <string name="add_to_cart">Add to cart</string>
    <string name="global_shopping"><![CDATA[Global shopping & trade starts here]]></string>
    <string name="expressdeal">EXPRESS DEALS</string>
    <string name="bestselling">BEST SELLING</string>
    <string name="expresscollection">ECLIPSE EXPRESS COLLECTION</string>
    <string name="trendingstyle">TRENDING STYLES</string>
    <string name="allsale">ALL SALE</string>
    <string name="search">Search</string>
    <string name="lorem">Lorem dress product</string>
    <string name="check_availability_option">Check availability and delivery option</string>
    <string name="choose_color">Choose a colour for item</string>
    <string name="ok">OK</string>
    <string name="size_available">Size available for this item</string>
    <string name="postal">Postal code</string>
    <string name="url">https://netforcesales.com/eclipseexpress/</string>
    <string name="title_activity_viewall_subcategory">Viewall_subcategory</string>
    <string name="title_activity_view_all_flat_offers">View_all_flat_offers</string>
    <string name="title_activity_myorder_details">Myorder_details</string>
    <string name="webservice_base_url">http://shopping.aapkatrade.com/webservice.php</string>
    <string name="pleaseWait">Wait !</string>
    <string name="webpage_being_loaded">Data is loading &#8230;&#8230;&#8230;</string>
    <string name="sign_in">SIGN IN!</string>
    <string name="email_or_mobile">Email</string>

    <string name="sign_in_with">OR Sign In With</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="dont_have_account">Don\'t have an account? </string>

    <string name="tab_1">Home</string>
    <string name="tab_2">Wallet</string>
    <string name="tab_3">Track Order</string>
    <string name="tab_4">Account</string>
    <string name="tab_5">Chat</string>
    <string name="quantity">Quantity</string>
    <string name="enter_quantity">Enter Quantity</string>

</resources>
