<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.aapkatrade.shopping.login.NewLoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="10"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2.5"
            >

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">


                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:src="@drawable/logo1"
                    android:layout_centerHorizontal="true"
                    />


            </RelativeLayout>


        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="7.5"
            >

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="@dimen/twenty_dip"
                    android:layout_marginRight="@dimen/twenty_dip"
                    android:layout_marginBottom="@dimen/twenty_dip"
                    android:orientation="vertical"
                    android:layout_alignParentTop="true"
                    >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/sign_in"
                        android:textColor="@color/black"
                        android:textStyle="bold"
                        />


                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/email_or_mobile"
                        android:textColorHint="#5d5d5d"
                        android:layout_marginTop="@dimen/ten_dip"
                        tools:ignore="HardcodedText">


                        <EditText
                            android:id="@+id/etEmail"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_toRightOf="@+id/imgview_password"
                            android:imeOptions="actionNext"
                            android:inputType="textEmailAddress"
                            android:maxLines="1"
                            android:padding="@dimen/ten_dip"
                            android:theme="@style/myedittext"
                            tools:ignore="RtlHardcoded" />

                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/password"
                        android:textColorHint="#5d5d5d"
                        android:layout_marginTop="@dimen/ten_dip"
                        tools:ignore="HardcodedText"
                        app:passwordToggleEnabled="true"
                        >


                        <EditText
                            android:id="@+id/etPassword"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_toRightOf="@+id/imgview_password"
                            android:imeOptions="actionDone"
                            android:inputType="textPassword"
                            android:maxLines="1"
                            android:padding="@dimen/ten_dip"
                            android:theme="@style/myedittext"
                            tools:ignore="RtlHardcoded" />

                    </android.support.design.widget.TextInputLayout>


                    <RelativeLayout
                        android:id="@+id/rl_login"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginTop="@dimen/twenty_dip"
                        android:background="@drawable/button_orange_back"
                        android:gravity="center_vertical"
                        android:padding="@dimen/ten_dip"
                        >

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:text="@string/login"
                            android:textColor="@color/white"
                            />

                    </RelativeLayout>


                </LinearLayout>


                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_marginBottom="@dimen/thirty_dip"
                    android:layout_marginRight="@dimen/twenty_dip"
                    android:layout_marginLeft="@dimen/twenty_dip"
                    >

                    <TextView
                        android:id="@+id/txtRegister"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:textSize="@dimen/twelve_dip"
                        android:textColor="#2C2D41"
                        android:text="@string/dont_have_account"

                        />

                    <TextView
                        android:id="@+id/txtForgetPassword"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:textSize="@dimen/twelve_dip"
                        android:text="@string/forgot_password"
                        android:textColor="#2C2D41"
                        />


                </RelativeLayout>


            </RelativeLayout>






        </LinearLayout>

    </LinearLayout>



</android.support.constraint.ConstraintLayout>
